--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ img {
 
 /* end sidebar */
 
+.post-title {
+	display: block;
+}
 /* Headings */
 h1 a, h2 a { 
     color: #000;
@@ -67,7 +70,7 @@ h1 a, h2 a {
 h1 a:hover, h2 a:hover {
     color: #000;
     border-left: 5px solid #337ab7;
-    margin: -10px;
+    margin-left: -10px;
     padding-left: 5px;
     /*border-bottom: 3px solid #f1ece9;*/
     text-decoration: none;
